<resources>
    <string name="app_name">Desafio4_DH</string>
    <string name="remember">Remember</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log In</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">Save Game</string>
</resources>