<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_bkg"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/ckb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/redBkg"
        android:text="@string/remember"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:backgroundTint="@color/redBkg"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/txv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/blueLink"
        android:textSize="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"/>

</LinearLayout>