<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_bkg"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/name"
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/blueBkg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/repeat_password"
            android:id="@+id/tiet_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blueBkg"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/create_account"
        android:backgroundTint="@color/redBkg"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

</LinearLayout>