<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/blueBkg"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/name"
                    android:id="@+id/tiet_name_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blueBkg"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/blueBkg"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/created_at"
                    android:id="@+id/tiet_created_at_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blueBkg"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/blueBkg"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_description_game"
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/blueBkg" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textStyle="bold"
                android:text="@string/save_game"
                android:backgroundTint="@color/redBkg"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>